# Android-auto-

openauto-ce-debian-bullseye-i386/: .gitignore  README.md
openauto-ce-debian-bullseye-i386/scripts/: install-openauto-ce.sh
openauto-ce-debian-bullseye-i386/systemd/: openauto.service
openauto-splithost-v8/: CMakeLists.txt  README.md
openauto-splithost-v8/apps/splithost/: CMakeLists.txt
openauto-splithost-v8/apps/splithost/src/: splithost.cpp
openauto-splithost-v8/apps/splithost/src/hub/: HubWindow.cpp  HubWindow.hpp  ModuleManager.hpp  WebBridge.hpp
openauto-splithost-v8/hub/modules/: uptime.sh  usb_mics.sh
openauto-splithost-v8/hub/web-src/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
openauto-splithost-v8/hub/web-src/src/: App.svelte  main.ts
openauto-splithost-v8/hub/web-src/src/lib/: stores.ts  webchannel.ts
openauto-splithost-v8/openauto/: build_openauto.sh
openauto-splithost-v8/packaging/desktop/: splithost.desktop
openauto-splithost-v8/scripts/: build_all.sh  build_hub_web.sh  install_all.sh  run_splithost.sh
