cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt5 REQUIRED COMPONENTS Widgets WebEngineWidgets WebChannel)
find_package(PkgConfig REQUIRED)
pkg_check_modules(XCB REQUIRED xcb)
add_executable(splithost src/splithost.cpp src/hub/HubWindow.cpp)
target_include_directories(splithost PRIVATE ${XCB_INCLUDE_DIRS} src src/hub)
target_link_libraries(splithost PRIVATE Qt5::Widgets Qt5::WebEngineWidgets Qt5::WebChannel ${XCB_LIBRARIES})
